force-app/main/default/objects/b3o__Job__c/b3o__Job__c.object-meta.xml
<CustomObject>
    <label>3B Job</label>
    <nameField>
        <label>Job Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>3B Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>