force-app/main/default/objects/b3o__Job__c/fields/b3_Job_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>b3_Job_Type_Name__c</fullName>
    <formula>b3o__Job_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Type Name</label>
    <type>Text</type>
</CustomField>