force-app/main/default/objects/b3o__Job__c/fields/b3o__Application_Form__c.field-meta.xml
<CustomField>
    <fullName>b3o__Application_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This will be the application form displayed when a candidate clicks on &quot;Apply&quot;</inlineHelpText>
    <label>Application Form</label>
    <referenceTo>b3f__Form__c</referenceTo>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>