force-app/main/default/objects/b3o__Job__c/fields/b3o__Apply_Button_Text__c.field-meta.xml
<CustomField>
    <fullName>b3o__Apply_Button_Text__c</fullName>
    <inlineHelpText>What is the apply button&apos;s text? Default is &quot;Apply&quot;</inlineHelpText>
    <label>Apply Button Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>