force-app/main/default/objects/b3o__Job__c/fields/b3o__Available_From__c.field-meta.xml
<CustomField>
    <fullName>b3o__Available_From__c</fullName>
    <inlineHelpText>If this field is populated, then the post will only be available from that date &amp; time</inlineHelpText>
    <label>Available From</label>
    <type>DateTime</type>
</CustomField>