force-app/main/default/objects/b3o__Job__c/fields/b3o__Available_Until__c.field-meta.xml
<CustomField>
    <fullName>b3o__Available_Until__c</fullName>
    <inlineHelpText>If populated, then the post will only be live until that date</inlineHelpText>
    <label>Available Until</label>
    <type>DateTime</type>
</CustomField>