force-app/main/default/objects/b3o__Job__c/fields/b3o__Available_Until_Calculated__c.field-meta.xml
<CustomField>
    <fullName>b3o__Available_Until_Calculated__c</fullName>
    <formula>if(not(isblank(b3o__Available_Until__c)),CASE(MONTH(DATEVALUE(b3o__Available_Until__c)),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;) + &quot; &quot; +(LPAD(TEXT(DAY(DATEVALUE(b3o__Available_Until__c))), 2, &quot;0&quot;)  + &quot;, &quot; + 
TEXT(YEAR(DATEVALUE(b3o__Available_Until__c))))  , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Until Calculated</label>
    <type>Text</type>
</CustomField>