force-app/main/default/objects/b3o__Job__c/fields/b3o__Client_Account__c.field-meta.xml
<CustomField>
    <fullName>b3o__Client_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>