force-app/main/default/objects/b3o__Job__c/fields/b3o__Closing_Reason_Explanation__c.field-meta.xml
<CustomField>
    <fullName>b3o__Closing_Reason_Explanation__c</fullName>
    <label>Closing Reason Explanation</label>
    <type>TextArea</type>
</CustomField>