force-app/main/default/objects/b3o__Job__c/fields/b3o__Currency__c.field-meta.xml
<CustomField>
    <fullName>b3o__Currency__c</fullName>
    <defaultValue>&quot;£&quot;</defaultValue>
    <inlineHelpText>We advise to put the currency in ISO Format here (GBP, USD, EUR etc)</inlineHelpText>
    <label>Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>