force-app/main/default/objects/b3o__Job__c/fields/b3o__Custom_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>b3o__Custom_Job_ID__c</fullName>
    <label>Custom Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>