force-app/main/default/objects/b3o__Job__c/fields/b3o__Custom_Pay_Information__c.field-meta.xml
<CustomField>
    <fullName>b3o__Custom_Pay_Information__c</fullName>
    <inlineHelpText>If completed, this will be displayed on the job post.</inlineHelpText>
    <label>Custom Pay Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>