force-app/main/default/objects/b3o__Job__c/fields/b3o__Date_Posted__c.field-meta.xml
<CustomField>
    <fullName>b3o__Date_Posted__c</fullName>
    <inlineHelpText>Date job was posted last</inlineHelpText>
    <label>Date Posted</label>
    <type>Date</type>
</CustomField>