force-app/main/default/objects/b3o__Job__c/fields/b3o__Date_Posted_First__c.field-meta.xml
<CustomField>
    <fullName>b3o__Date_Posted_First__c</fullName>
    <inlineHelpText>This is when the job was posted for the first time</inlineHelpText>
    <label>Date Posted First</label>
    <type>Date</type>
</CustomField>