force-app/main/default/objects/b3o__Job__c/fields/b3o__Do_not_show_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>b3o__Do_not_show_Pay_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the job post will not display any pay rate information</inlineHelpText>
    <label>Do not show Pay Rate</label>
    <type>Checkbox</type>
</CustomField>