force-app/main/default/objects/b3o__Job__c/fields/b3o__Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>b3o__Employment_Type__c</fullName>
    <label>Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>