force-app/main/default/objects/b3o__Job__c/fields/b3o__End_Date__c.field-meta.xml
<CustomField>
    <fullName>b3o__End_Date__c</fullName>
    <inlineHelpText>Target end date for this job</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>