force-app/main/default/objects/b3o__Job__c/fields/b3o__Featured_Job__c.field-meta.xml
<CustomField>
    <fullName>b3o__Featured_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If job is selected as featured, it will be highlighted on the job board.</inlineHelpText>
    <label>Featured Job?</label>
    <type>Checkbox</type>
</CustomField>