force-app/main/default/objects/b3o__Job__c/fields/b3o__Job_Advert_Title__c.field-meta.xml
<CustomField>
    <fullName>b3o__Job_Advert_Title__c</fullName>
    <inlineHelpText>The title of the job advert to be used when posting through Logic Melon or BroadBean</inlineHelpText>
    <label>Job Advert Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>