force-app/main/default/objects/b3o__Job__c/fields/b3o__Job_Boards__c.field-meta.xml
<CustomField>
    <fullName>b3o__Job_Boards__c</fullName>
    <label>Job Boards</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>b3o__Company_Job_Boards</valueSetName>
    </valueSet>
</CustomField>