force-app/main/default/objects/b3o__Job__c/fields/b3o__Job_Category__c.field-meta.xml
<CustomField>
    <fullName>b3o__Job_Category__c</fullName>
    <inlineHelpText>Slotting job posts into categories helps candidates find jobs easier.</inlineHelpText>
    <label>Job Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administration, business and management</fullName>
            </value>
            <value>
                <fullName>Animals, land and environment</fullName>
            </value>
            <value>
                <fullName>Computing and ICT</fullName>
            </value>
            <value>
                <fullName>Construction and building</fullName>
            </value>
            <value>
                <fullName>Design, arts and crafts</fullName>
            </value>
            <value>
                <fullName>Education and training</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Facilities and property services</fullName>
            </value>
            <value>
                <fullName>Financial services</fullName>
            </value>
            <value>
                <fullName>Garage services</fullName>
            </value>
            <value>
                <fullName>Hairdressing and beauty</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Heritage, culture and libraries</fullName>
            </value>
            <value>
                <fullName>Hospitality, catering and tourism</fullName>
            </value>
            <value>
                <fullName>Languages</fullName>
            </value>
            <value>
                <fullName>Legal and court services</fullName>
            </value>
            <value>
                <fullName>Manufacturing and production</fullName>
            </value>
            <value>
                <fullName>Performing arts and media</fullName>
            </value>
            <value>
                <fullName>Print and publishing, marketing and advertising</fullName>
            </value>
            <value>
                <fullName>Retail and customer services</fullName>
            </value>
            <value>
                <fullName>Science, mathematics and statistics</fullName>
            </value>
            <value>
                <fullName>Security, uniformed and protective services</fullName>
            </value>
            <value>
                <fullName>Social sciences and religion</fullName>
            </value>
            <value>
                <fullName>Social work and caring services</fullName>
            </value>
            <value>
                <fullName>Sport and leisure</fullName>
            </value>
            <value>
                <fullName>Transport, distribution and logistics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>