force-app/main/default/objects/b3o__Job__c/fields/b3o__Job_Group__c.field-meta.xml
<CustomField>
    <fullName>b3o__Job_Group__c</fullName>
    <label>Job Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group 1</fullName>
            </value>
            <value>
                <fullName>Group 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>