force-app/main/default/objects/b3o__Job__c/fields/b3o__Job_ID__c.field-meta.xml
<CustomField>
    <fullName>b3o__Job_ID__c</fullName>
    <displayFormat>JOB-{000}-{MM}-{YY}</displayFormat>
    <label>Job ID</label>
    <type>AutoNumber</type>
</CustomField>