force-app/main/default/objects/b3o__Job__c/fields/b3o__Job_Industry__c.field-meta.xml
<CustomField>
    <fullName>b3o__Job_Industry__c</fullName>
    <label>Job Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Aerospace and Aviation</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Audio Visual</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Banking and Finance</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Consultancy</fullName>
            </value>
            <value>
                <fullName>Customer Service and Call Centres</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Education and Training</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Energy, Oil and Gas</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Environmental and Waste</fullName>
            </value>
            <value>
                <fullName>Facilities Management</fullName>
            </value>
            <value>
                <fullName>FMCG</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Hair, Beauty and Cosmetics</fullName>
            </value>
            <value>
                <fullName>Health, Medical and related</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>IT and Internet</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Logistics, Procurement, Distribution and Supply Chain</fullName>
            </value>
            <value>
                <fullName>Manufacturing and Production</fullName>
            </value>
            <value>
                <fullName>Marketing, Advertising and PR</fullName>
            </value>
            <value>
                <fullName>Media, New Media and Creative</fullName>
            </value>
            <value>
                <fullName>Military and Defence</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>