force-app/main/default/objects/b3o__Job__c/fields/b3o__Job_Post_Body__c.field-meta.xml
<CustomField>
    <fullName>b3o__Job_Post_Body__c</fullName>
    <inlineHelpText>This will be the main information that will attract potential candidates. Be creative!</inlineHelpText>
    <label>Job Post Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>