force-app/main/default/objects/b3o__Job__c/fields/b3o__Job_Post_Footer__c.field-meta.xml
<CustomField>
    <fullName>b3o__Job_Post_Footer__c</fullName>
    <inlineHelpText>This will be displayed below the Job Post</inlineHelpText>
    <label>Job Post Footer</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>