force-app/main/default/objects/b3o__Job__c/fields/b3o__Job_Post_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>b3o__Job_Post_Short_Description__c</fullName>
    <inlineHelpText>This will be displayed above the job post</inlineHelpText>
    <label>Job Post Short Description</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>