force-app/main/default/objects/b3o__Job__c/fields/b3o__Job_Post_Status__c.field-meta.xml
<CustomField>
    <fullName>b3o__Job_Post_Status__c</fullName>
    <formula>if((b3o__Post_Job__c == true || b3o__Posted_on_Job_Boards__c &gt; 0), if( text(b3o__Status__c) == &quot;Open&quot;,

if((b3o__Available_Until__c &gt; now() &amp;&amp; not(isblank(b3o__Available_Until__c)))|| (isblank(b3o__Available_Until__c)), if((b3o__Available_From__c &lt; now() &amp;&amp; not(isblank(b3o__Available_From__c)) &amp;&amp; not(isblank( b3o__Date_Posted__c )))|| (isblank(b3o__Available_From__c) &amp;&amp; not(isblank( b3o__Date_Posted__c ))), &quot;Live&quot;, &quot;Not yet available (Missing &apos;Date Posted&apos; or &apos;Available From&apos;)&quot; ), &quot;Not Available&quot;)

, if( text(b3o__Status__c) == &quot;Closed&quot;, &quot;Job Post is closed. This post is no longer live&quot;,  if( text(b3o__Status__c) == &quot;On Hold&quot;, &quot;Currently on hold, no applications are accepted&quot;, &quot;Not Available&quot;))), &quot;Job is not posted yet&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This indicates whether or not the Job Post is available on the Job Board</inlineHelpText>
    <label>Job Post Status</label>
    <type>Text</type>
</CustomField>