force-app/main/default/objects/b3o__Job__c/fields/b3o__Min_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>b3o__Min_Pay_Rate__c</fullName>
    <label>Min Pay Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>