force-app/main/default/objects/b3o__Job__c/fields/b3o__Pay_Benefits__c.field-meta.xml
<CustomField>
    <fullName>b3o__Pay_Benefits__c</fullName>
    <label>Pay Benefits</label>
    <length>80</length>
    <type>Text</type>
</CustomField>