force-app/main/default/objects/b3o__Job__c/fields/b3o__Pay_Format__c.field-meta.xml
<CustomField>
    <fullName>b3o__Pay_Format__c</fullName>
    <label>Pay Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Hour</fullName>
            </value>
            <value>
                <fullName>Per Day</fullName>
            </value>
            <value>
                <fullName>Per Week</fullName>
            </value>
            <value>
                <fullName>Per Month</fullName>
            </value>
            <value>
                <fullName>Per Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>