force-app/main/default/objects/b3o__Job__c/fields/b3o__Post_Job__c.field-meta.xml
<CustomField>
    <fullName>b3o__Post_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this checkbox in order to make the job available on the job board.</inlineHelpText>
    <label>Post Job</label>
    <type>Checkbox</type>
</CustomField>