force-app/main/default/objects/b3o__Job__c/fields/b3o__Posted_on_Job_Boards__c.field-meta.xml
<CustomField>
    <fullName>b3o__Posted_on_Job_Boards__c</fullName>
    <label>Posted on Job Boards</label>
    <summaryForeignKey>b3o__Job_Board_Posting__c.b3o__X3B_Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>