force-app/main/default/objects/b3o__Job__c/fields/b3o__Question_Set__c.field-meta.xml
<CustomField>
    <fullName>b3o__Question_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescreening Question Set</label>
    <referenceTo>b3o__Question_Set__c</referenceTo>
    <relationshipLabel>3B Jobs</relationshipLabel>
    <relationshipName>X3B_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>