force-app/main/default/objects/b3o__Job__c/fields/b3o__Quick_Apply_Form__c.field-meta.xml
<CustomField>
    <fullName>b3o__Quick_Apply_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Must be 3B Application based form</description>
    <label>DEPRECATED</label>
    <referenceTo>b3f__Form__c</referenceTo>
    <relationshipLabel>3B Jobs (Quick Apply Form)</relationshipLabel>
    <relationshipName>X3B_Jobs1</relationshipName>
    <type>Lookup</type>
</CustomField>