force-app/main/default/objects/b3o__Job__c/fields/b3o__Reason_for_Closing__c.field-meta.xml
<CustomField>
    <fullName>b3o__Reason_for_Closing__c</fullName>
    <label>Reason for Closing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>