force-app/main/default/objects/b3o__Job__c/fields/b3o__Recruitment_Process__c.field-meta.xml
<CustomField>
    <fullName>b3o__Recruitment_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>What recruitment steps is the job applicant going to follow?</inlineHelpText>
    <label>Recruitment Process</label>
    <referenceTo>b3o__Recruitment_Process__c</referenceTo>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>