force-app/main/default/objects/b3o__Job__c/fields/b3o__Registration_Form__c.field-meta.xml
<CustomField>
    <fullName>b3o__Registration_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration Form</label>
    <referenceTo>b3f__Form__c</referenceTo>
    <relationshipLabel>3B Jobs (Registration Form)</relationshipLabel>
    <relationshipName>X3B_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>