force-app/main/default/objects/b3o__Job__c/fields/b3o__SAYT_Result__c.field-meta.xml
<CustomField>
    <fullName>b3o__SAYT_Result__c</fullName>
    <formula>b3o__Days_since_last_posted__c &amp; &quot;, &quot; &amp; b3o__Site__r.b3o__Site_Name_for_Job_Board__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAYT Result</label>
    <type>Text</type>
</CustomField>