force-app/main/default/objects/b3o__Job__c/fields/b3o__Site__c.field-meta.xml
<CustomField>
    <fullName>b3o__Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Where is this job going to happen?</inlineHelpText>
    <label>Site</label>
    <referenceTo>b3o__Site__c</referenceTo>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>