force-app/main/default/objects/b3o__Job__c/fields/b3o__Status__c.field-meta.xml
<CustomField>
    <fullName>b3o__Status__c</fullName>
    <inlineHelpText>Open - this will allow accepting candidates&apos; applications
On Hold - this will temporarily not allow the acceptance of new applications
Closed - this marks the job as closed. Once a job is closed, it cannot be re-opened.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>