force-app/main/default/objects/b3o__Job__c/fields/b3o__Total_Applications__c.field-meta.xml
<CustomField>
    <fullName>b3o__Total_Applications__c</fullName>
    <inlineHelpText>This is the number of applications attracted to this job</inlineHelpText>
    <label>Total Applications</label>
    <summaryForeignKey>b3o__Application__c.b3o__Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>