force-app/main/default/objects/b3o__Job__c/fields/b3o__Total_Placements__c.field-meta.xml
<CustomField>
    <fullName>b3o__Total_Placements__c</fullName>
    <label>Total Placements</label>
    <summaryForeignKey>b3o__Placement__c.b3o__Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>