force-app/main/default/objects/b3o__Job__c/fields/tc9_3bint__Award_Level__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Award_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Award Level</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_et__Award_Classifications_and_Levels__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Award Level</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>tc9_et__Award_Classifications_and_Levels__c</referenceTo>
    <relationshipLabel>3B Jobs (Award Level)</relationshipLabel>
    <relationshipName>X3B_Jobs1</relationshipName>
    <type>Lookup</type>
</CustomField>