force-app/main/default/objects/b3o__Job__c/fields/tc9_3bint__Default_Assignment_Contact__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Default_Assignment_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This contact will default as the Timesheet Approver, Expense Claim Approver, Leave Approver and Client Hiring Manager on the creation of a 2cloudnine Assignment record if the related approver fields are left blank.</description>
    <inlineHelpText>This contact will default as the Timesheet Approver, Expense Claim Approver, Leave Approver and Client Hiring Manager on the creation of a 2cloudnine Assignment record if the related approver fields are left blank.</inlineHelpText>
    <label>Default Assignment Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>3B Jobs</relationshipLabel>
    <relationshipName>X3B_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>