force-app/main/default/objects/b3o__Job__c/fields/tc9_3bint__Default_Invoice_Contact__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Default_Invoice_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Invoice Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>3B Jobs (Default Invoice Contact)</relationshipLabel>
    <relationshipName>X3B_Jobs4</relationshipName>
    <type>Lookup</type>
</CustomField>