force-app/main/default/objects/b3o__Job__c/fields/tc9_3bint__Does_Not_Use_Online_Expense_Claims__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Does_Not_Use_Online_Expense_Claims__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Employee will not be setup for online expense claim functionality in relation to this Assignment created from the 2cloudnine 3B Integration.</description>
    <inlineHelpText>If checked, the Employee will not be setup for online expense claim functionality in relation to this Assignment created from the 2cloudnine 3B Integration.</inlineHelpText>
    <label>Does Not Use Online Expense Claims</label>
    <type>Checkbox</type>
</CustomField>