force-app/main/default/objects/b3o__Job__c/fields/tc9_3bint__Expense_Claim_Approver__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Expense_Claim_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Claim Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>3B Jobs (Expense Claim Approver)</relationshipLabel>
    <relationshipName>X3B_Jobs3</relationshipName>
    <type>Lookup</type>
</CustomField>