force-app/main/default/objects/b3o__Job__c/fields/tc9_3bint__Inherit_Rate_Calculator_Values_From__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Inherit_Rate_Calculator_Values_From__c</fullName>
    <description>Defines where the Award Classification, Award Level, Location, Industry and Risk Classification set on the Employee Specific Rate Calculator are from. Leaving this blank will default to the Rate Calculator Template.</description>
    <inlineHelpText>Defines where the Award Classification, Award Level, Location, Industry and Risk Classification set on the Employee Specific Rate Calculator are from. Leaving this blank will default to the Rate Calculator Template.</inlineHelpText>
    <label>Inherit Rate Calculator Values From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Rate_Calculator_Inherit_Picklists</valueSetName>
    </valueSet>
</CustomField>