force-app/main/default/objects/b3o__Job__c/fields/tc9_3bint__Interpretation_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Interpretation_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interpretation Rule</label>
    <referenceTo>tc9_et__Interpretation_Rule__c</referenceTo>
    <relationshipLabel>3B Jobs</relationshipLabel>
    <relationshipName>X3B_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>